[cssom] Implement border-image serialization https://bugs.webkit.org/show_bug.cgi?id=238102

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Let the test accept some equivalent serializations.
Expect it to pass.

* web-platform-tests/css/css-backgrounds/parsing/border-image-valid-expected.txt:
* web-platform-tests/css/css-backgrounds/parsing/border-image-valid.html:

Source/WebCore:

Add logic for serializing border-image at specified-value time.

Tests: fast/css/parse-border-image-repeat-null-crash.html
       imported/w3c/web-platform-tests/css/css-backgrounds/parsing/border-image-valid.html

* css/StyleProperties.cpp:
(WebCore::StyleProperties::getPropertyValue const):
(WebCore::StyleProperties::borderImagePropertyValue const):
(WebCore::StyleProperties::asText const):
* css/StyleProperties.h:

LayoutTests:

Expect cssText to serialize border-image instead of longhands.

* fast/css/parse-border-image-repeat-null-crash-expected.txt:



Canonical link: https://commits.webkit.org/248643@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291537 268f45cc-cd09-0410-ab3c-d52691b4dbfc